# Ecommerce-AI-Assistant-AGENTIC

./: .gitignore  README.md
backend/: .env.example  CLAUDE.md  README.md  main.py  pyproject.toml
backend/app/: config.py  db.py  errors.py  logging.py  middleware.py  security.py  tracing.py
backend/app/agent/: __init__.py  graph.py  llm.py  prompts.py  state.py  support_agent.py  tools.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: auth.py  conversations.py  health.py  orders.py  products.py  ws.py
backend/app/memory/: __init__.py  conversation.py
backend/app/models/: __init__.py  conversation.py  knowledge.py  order.py  product.py  user.py
backend/app/rag/: embeddings.py  ingest.py  retriever.py
backend/app/repositories/: base.py  conversation_repository.py  knowledge_repository.py  order_repository.py  product_repository.py  user_repository.py
backend/app/schemas/: auth.py  chat.py  conversation.py  order.py  product.py
backend/app/services/: auth_service.py  chat_service.py  conversation_service.py  order_service.py  product_service.py
backend/data/knowledge/: faq.md  refund_policy.md  returns_policy.md  shipping_policy.md
backend/docker/: Dockerfile  docker-compose.yml
backend/scripts/: init_db.py  seed.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_rag.py
frontend/: .env.example  README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: app-shell.tsx  page-header.tsx  system-status.tsx
frontend/src/lib/: api.ts  chat-socket.ts  config.ts  format.ts  token.ts  types.ts
(+10 files in other folders)
